# open-moodle

./: .gitignore  Moodle.spec  README.md  main.py  pyproject.toml  re  settings.json
app/: config.py  default_config.py  main.py  main_gui.py
app/gui/: browser_tab.py  main_window.py
app/models/: settings.py
browser_data/: Local State  SingletonCookie  SingletonLock  SingletonSocket
browser_data/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-wal  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
browser_data/Default/DawnGraphiteCache/: data_1  index
browser_data/Default/DawnWebGPUCache/: data_1  index
browser_data/Default/Extension Rules/: LOG
browser_data/Default/Extension Scripts/: LOG
browser_data/Default/Extension State/: LOG  LOG.old
browser_data/Default/GCM Store/: LOG  LOG.old
browser_data/Default/GPUCache/: data_1  index
browser_data/Default/Session Storage/: 000005.ldb  000007.ldb  000009.ldb  000013.ldb  LOG  LOG.old  MANIFEST-000001
browser_data/Default/Sessions/: Session_13405442953244297  Session_13405443609924173  Session_13405537505128970  Session_13405537790728996  Tabs_13405442953595185  Tabs_13405443610324490  Tabs_13405537505589900  Tabs_13405537791102384
browser_data/GrShaderCache/: data_1  index
browser_data/GraphiteDawnCache/: data_0  data_1  data_2  index
browser_data/ShaderCache/: data_1  index
browser_data/segmentation_platform/: ukm_db
main/: config.py  login.py
(+671 files in other folders)
