[project]
name = "open-moodle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "pyinstaller>=6.16.0",
    "pyqt6>=6.9.1",
    "pyqt6-webengine>=6.9.0",
]
